KSENROLL-13101: fixed alignment issues with small format schedule
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@70414 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/MainHeading.less
@@ -103,15 +103,11 @@
 }
 
 .kscr-MainHeading--small {
-  .kscr-MainHeading
+  .kscr-MainHeading;
 }
 
 .kscr-MainHeading--large {
-  .kscr-MainHeading
-}
-
-.kscr-Schedule-header {
-  .kscr-MainHeading-header
+  .kscr-MainHeading;
 }
 
 @media screen and (max-width: @smallFormatMax) {
