--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/responsive.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/responsive.less
@@ -112,7 +112,6 @@
     }
 
     .kscr-MainHeading-header {
-        width: 100%; // this will properly center the heading of the schedule & cart in large format
         text-align: left;
     }
 
